objects/Activity.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Call_Date__c</fullName>
        <label>Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discovery Call</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Follow up</fullName>
                </value>
                <value>
                    <fullName>Working Session</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opened_At__c</fullName>
        <label>Opened At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Count__c</fullName>
        <label>Open Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replied_At__c</fullName>
        <label>Replied At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Rating__c</fullName>
        <label>Call Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Status__c</fullName>
        <label>Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Voicemail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence_ID__c</fullName>
        <label>Sequence ID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivered_At__c</fullName>
        <label>Delivered At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Reason__c</fullName>
        <label>Error Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Completed</fullName>
                    <default>true</default>
                    <label>Not Completed</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Email__c</fullName>
        <formula>Contains( Subject ,&quot;[Email In]&quot;)

&amp;&amp; Not(Contains( Subject ,&quot;[Email In] Automatic reply&quot;))

&amp;&amp; 	 Not(Contains( Subject ,&quot;[Email In] Declined:&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inbound Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Title__c</fullName>
        <label>Meeting Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replied_Email__c</fullName>
        <formula>Not(Isnull( Replied_At__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Replied Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence_Name__c</fullName>
        <label>Sequence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Type__c</fullName>
        <formula>IF( Contains(Sequence_Name__c &amp;  Attributable_Sequence_Name__c ,&quot;Inbound&quot;),&quot;Inbound&quot;,
IF( Contains(Sequence_Name__c &amp; Attributable_Sequence_Name__c ,&quot;Outbound&quot;),&quot;Outbound&quot;,
IF( Contains(Sequence_Name__c &amp; Attributable_Sequence_Name__c  ,&quot;DemandGen&quot;),&quot;Inbound&quot;,

IF( ActivityDate &gt; DATEVALUE( &quot;2020-04-30&quot;) &amp;&amp; Sequence_Name__c=&quot;&quot;&amp;&amp; Attributable_Sequence_Name__c =&quot;&quot; , &quot;Non Sequence&quot;,&quot;&quot;)


)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>activity_type__c</fullName>
        <description>Custom Activity Sub-Type</description>
        <inlineHelpText>Custom Activity Sub-Type</inlineHelpText>
        <label>Activity Type Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email (Sent)</fullName>
                </value>
                <value>
                    <fullName>Email (Received)</fullName>
                </value>
                <value>
                    <fullName>Chat (Intercom)</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Slack (Community)</fullName>
                </value>
                <value>
                    <fullName>Chorus Recording</fullName>
                </value>
                <value>
                    <fullName>Enterprise Pricing</fullName>
                </value>
                <value>
                    <fullName>Intercom Chat</fullName>
                </value>
                <value>
                    <fullName>Email (Out)</fullName>
                </value>
                <value>
                    <fullName>Email (In)</fullName>
                </value>
                <value>
                    <fullName>Call Outbound (Answered)</fullName>
                </value>
                <value>
                    <fullName>Call Outbound (Not Answered)</fullName>
                </value>
                <value>
                    <fullName>LinkedIn InMail</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Message</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>PB Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Direction__c</fullName>
        <label>Call Direction</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Recording__c</fullName>
        <description>Outreach Call Recording</description>
        <label>Call Recording</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Type__c</fullName>
        <description>For reporting purposes. To surface recent reference events for Marketing, Sales, and Product.</description>
        <label>Reference Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Sales reference</fullName>
                </value>
                <value>
                    <fullName>Beta test</fullName>
                </value>
                <value>
                    <fullName>Discovery interview</fullName>
                </value>
                <value>
                    <fullName>Logo use</fullName>
                </value>
                <value>
                    <fullName>Content collaboration</fullName>
                </value>
                <value>
                    <fullName>Event or community ambassador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_activity__c</fullName>
        <formula>NOT(CONTAINS( Subject ,&quot;[Email In]&quot;) )</formula>
        <label>Actual Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Region__c</fullName>
        <description>Returns the Sales Region of the Assigned user.</description>
        <formula>TEXT( Owner:User.Sales_Region__c )</formula>
        <label>Assigned Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automatic_Reply__c</fullName>
        <formula>Contains(Subject, &quot;[Email In] Automatic reply&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this an automatic reply</inlineHelpText>
        <label>Automatic Reply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unsubscribed_At__c</fullName>
        <label>Unsubscribed At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Team__c</fullName>
        <formula>Text(Owner:User.Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Started__c</fullName>
        <formula>Sequence_Step_Number__c =1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Started in a sequence, step #1</inlineHelpText>
        <label>Sequence Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Purpose_Name__c</fullName>
        <label>Call Purpose Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <inlineHelpText>Date/Time of created date for reports</inlineHelpText>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Marked_As_Spam_At__c</fullName>
        <label>Marked As Spam At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Booked_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting Booked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Completed_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meeting Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_to_Object__c</fullName>
        <formula>If( left(WhatId,3)= &quot;006&quot;, &quot;Opportunity&quot;,

  If(left(WhoId,3)=&quot;00Q&quot;,&quot;Lead&quot;,
      If(left(WhoId,3)=&quot;003&quot;,&quot;Contact&quot;,

If( left(WhatId,3)= &quot;001&quot;, &quot;Account&quot;,&quot;&quot;)

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related to Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Sub_Type__c</fullName>
        <formula>IF( Contains(Sequence_Name__c ,&quot;[Inbound] [Trial]&quot;), &quot;Inbound-Trial&quot;,
IF( Contains(Sequence_Name__c ,&quot;[Inbound] [Non-Activated Trial]&quot;),&quot;Inbound-Non Activated Trial&quot;,
IF( Contains(Sequence_Name__c ,&quot;[Inbound] [Pricing Request]&quot;),&quot;Inbound-Pricing Request&quot;,
IF( Contains(Sequence_Name__c ,&quot;[Inbound] [Demo Request]&quot;),&quot;Inbound-Demo Request&quot;,
IF( Contains(Sequence_Name__c ,&quot;[Inbound] [MQL]&quot;),&quot;Inbound-MQL&quot;,
IF( Contains(Sequence_Name__c ,&quot;[Inbound] [Event Follow-Up]&quot;),&quot;Inbound-Event Followup&quot;,
IF( Contains(Sequence_Name__c ,&quot;[Inbound] [Webinar Follow-Up]&quot;),&quot;Inbound-Webinar Followup&quot;,
IF( Contains(Sequence_Name__c ,&quot;[Inbound] [eBook]&quot;),&quot;Inbound-ebook&quot;,
IF( Contains(Sequence_Name__c ,&quot;[Inbound]&quot;),&quot;Inbound-Other&quot;,
IF( Contains(Sequence_Name__c ,&quot;[Outbound]&quot;),&quot;Outbound&quot;,
IF( Contains(Sequence_Name__c ,&quot;[DemandGen]&quot;),
IF( Contains(Sequence_Name__c ,&quot;[Content]&quot;), &quot;DemandGen-Content&quot;,
IF( Contains(Sequence_Name__c ,&quot;[Webinar]&quot;), &quot;DemandGen-Webinar&quot;, &quot;DemandGen-Other&quot;)),&quot;&quot;)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence Sub-Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Test_Formuala__c</fullName>
        <formula>Owner:User.Admin_Temp_Field__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Temporary field for testing &amp; short term reporting</inlineHelpText>
        <label>Temp PB2J Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Manager__c</fullName>
        <formula>TEXT(Owner:User.Owner_Manager__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Outreach_Internal__c</fullName>
        <label>ID (Outreach Internal)</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Step_Number__c</fullName>
        <label>Sequence Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Disposition_Name__c</fullName>
        <label>Call Disposition Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Duration_seconds__c</fullName>
        <label>Call Duration (seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Sequence_ID__c</fullName>
        <label>Follow Up Sequence ID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Stage_at_Creation__c</fullName>
        <label>Opp Stage at Creation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vitally_Task_Category__c</fullName>
        <label>Vitally Task Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Call</fullName>
                </value>
                <value>
                    <fullName>Exec Engagement</fullName>
                </value>
                <value>
                    <fullName>Internal Action</fullName>
                </value>
                <value>
                    <fullName>Kick-off</fullName>
                </value>
                <value>
                    <fullName>Onboarding Session</fullName>
                </value>
                <value>
                    <fullName>Product Strategy</fullName>
                </value>
                <value>
                    <fullName>Program Management</fullName>
                </value>
                <value>
                    <fullName>Success Check-up</fullName>
                </value>
                <value>
                    <fullName>Success Retro</fullName>
                </value>
                <value>
                    <fullName>User Training / workshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach_Template_Name__c</fullName>
        <label>Outreach Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Sequence_Name__c</fullName>
        <label>Follow Up Sequence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Task_Type_Name__c</fullName>
        <inlineHelpText>Task Type name pushed from Outreach</inlineHelpText>
        <label>Sequence Task Type Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attributable_Sequence_ID__c</fullName>
        <description>Outreach Attributable Sequence ID</description>
        <label>Attributable Sequence ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_of_Week_Created_Date__c</fullName>
        <formula>WEEKDAY( datevalue(CreatedDate) )</formula>
        <label>Day of Week-Created Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Engineer_Task_Type__c</fullName>
        <description>Used for tracking Sales Engineer tasks and activities related to the Opportunity.</description>
        <inlineHelpText>Used for tracking Sales Engineer tasks and activities related to the Opportunity.</inlineHelpText>
        <label>Sales Engineer Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Managed Trial</fullName>
                </value>
                <value>
                    <fullName>Security Review</fullName>
                </value>
                <value>
                    <fullName>Competitive Intel gathering</fullName>
                </value>
                <value>
                    <fullName>API Testing</fullName>
                </value>
                <value>
                    <fullName>RFP response</fullName>
                </value>
                <value>
                    <fullName>Customised Demo</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Technical Discovery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Team_at_Creation__c</fullName>
        <inlineHelpText>Team of the task owner at creation</inlineHelpText>
        <label>Assigned Team at Creation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attributable_Sequence_Name__c</fullName>
        <description>Outreach Attributable Sequence Name</description>
        <label>Attributable Sequence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Status_at_Creation__c</fullName>
        <inlineHelpText>Stamps customer status at opp creation</inlineHelpText>
        <label>Customer Status at Creation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Role_at_Creation__c</fullName>
        <label>Assigned to Role at Creation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
</CustomObject>